--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -174,6 +174,27 @@
 }
 
 
+
+
+.demo-login-cta-button {
+  background-color: #f4326d;
+  color: white;
+  padding: 12px 24px;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.demo-login-cta-button:hover {
+  background-color: #1CC29F;
+}
+
+
+
+
+
 .hero-image-container {
   display: flex;
   align-items: center;
