--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,24 +1,53 @@
-nav {
-    padding: 20px;
+
+
+   .sidebar {
+    width: 250px;
+    height: 100vh;
     background-color: #343a40;
-    height: 100%;
     color: #fff;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    padding: 20px;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    overflow-y: auto; /* Enable scrolling if content overflows */
+  }
+  
+  .sidebar::-webkit-scrollbar {
+    width: 0; /* Remove the scrollbar */
+  }
+  
+  .sidebar {
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
   }
   
   ul {
     list-style: none;
     padding: 0;
+    margin: 0;
   }
   
   li {
-    margin: 15px 0;
+    display: flex;
+    align-items: center;
+    margin: 20px 0;
+    font-size: 25px;
+    font-weight: 600;
+  }
+  
+  .icon {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 15px;
   }
   
   a {
     text-decoration: none;
     color: #fff;
+    font-size: 18px;
     transition: color 0.3s ease;
   }
   
