fixed error in group-details.component

--- a/src/app/groups/group-details/group-details.component.html
+++ b/src/app/groups/group-details/group-details.component.html
@@ -60,6 +60,6 @@
 </div>
 
 
-<div class="sticky-button-container">
+<div class="sticky-button-container" *ngIf="groupDetails?._id">
   <button [routerLink]="['/groups/create-expenses', groupDetails._id]">Create Group Expense</button>
 </div>
